09/10/2003 Bob Rossi <bob@brasko.net>

   * helptext.h: Auto-generated because of README change.
   * cgdbrc.c: global ConfigType, add CONFIG_TYPE_FUNC_BOOL to structure.
   added global prototype command_set_stc
   global ConfigVariable, initialized for new variable showtgdbcommands
   added command_set_stc to implement new command
   command_parse_set, added case for CONFIG_TYPE_FUNC_BOOL

09/10/2003 Bob Rossi <bob@brasko.net>

   * interface.c: update_status_win, add cast to remove compiler warning.

09/09/2003 Bob Rossi <bob@brasko.net>

   * cgdbrc.c: command_do_continue, command_do_finish, command_do_next,
   command_do_run, command_do_step, update call to tgdb_run_debugger_command
   to handle new return value properly.
   * interface.c: source_input, internal_if_input, ditto

09/03/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, TGDB_SOURCES_DENIED case, changed comment.

09/03/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: struct tgdb *tgdb, adding global instance of tgdb library.
   start_gdb, update tgdb_initialize to use context for new interface.
   send_key, update tgdb_send_input to use context and new name.
   gdb_input, update tgdb_recv to use context and new name.
   child_input, update tgdb_tty_recv to use context and new name.
   tgdb_readline_input, update tgdb_recv_input to use context and new name.
   cleanup, update tgdb_shutdown to use context and new name.
   * cgdbrc.c: global, adding extern to tgdb instance.
   command_do_continue, command_do_finish, command_do_next, command_do_run,
   command_do_step, update tgdb_run_client_command to use context and new 
   name.
   * interface.c: global, adding extern to tgdb instance.
   update_status_win, update tgdb_tty_name to use context.
   signal_handler, catch and send signals TGDB is interested in.
   source_input, update tgdb_get_sources to use context and new name.
   source_input, update tgdb_modify_breakpoint to use context.