@@ -18,7 +18,7 @@
 #include "io.h"
 
 //static int gdb_stdin = 0;   /* Writing to this writes to gdb's stdin */
-static int gdb_stdout = 0;  /* Reading from this read's from gdb's stdout && stderr */
+//static int gdb_stdout = 0;  /* Reading from this read's from gdb's stdout && stderr */
 //static pid_t gdb_pid = 0;
 
 static int master_tty_fd = -1, slave_tty_fd = -1;
@@ -66,39 +66,7 @@ int gdbmi_tgdb_get_sources(void){
 }
 
 size_t gdbmi_tgdb_recv(char *buf, size_t n, struct queue *q){
-   char local_buf[n + 1];
-   ssize_t size, buf_size;
-
-
-   /* set buf to null for debug reasons */
-   memset(buf,'\0', n);
-
-   /* 1. read all the data possible from gdb that is ready. */
-   if( (size = io_read(gdb_stdout, local_buf, n)) < 0){
-      err_ret("%s:%d io_read error", __FILE__, __LINE__);
-      tgdb_append_command(q, TGDB_QUIT, NULL );
-      return -1;
-   } else if ( size == 0 ) {/* EOF */ 
-      buf_size = 0;
-      
-      tgdb_append_command(q, TGDB_QUIT, NULL);
-      
-      goto gdbmi_recv_finish;
-   }
-
-   local_buf[size] = '\0';
-
-   /* 2. At this point local_buf has everything new from this read.
-    * Now, the data must be parsed.
-    */
-   buf_size = gdbmi_parse(local_buf, size, buf, n, q);
-
-   /* 3. Run the users command */
-   /* tgdb_run_users_buffered_commands(); */
-
-gdbmi_recv_finish:
-
-   return buf_size;
+   return n;
 }
 
 char *gdbmi_tgdb_send(char *command, int out_type) {
