@@ -115,7 +115,8 @@ enum INTERFACE_COMMANDS {
     TGDB_ABSOLUTE_SOURCE_ACCEPTED,
     TGDB_ABSOLUTE_SOURCE_DENIED,
     TGDB_DISPLAY_UPDATE,
-    TGDB_QUIT
+	TGDB_QUIT_ABNORMAL,
+    TGDB_QUIT_NORMAL
 };
 
 struct Command {
